# osw

./: .gitignore  README.md  mix.exs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
legacy/osw/: License  README  oswinit.tcl
legacy/osw/TclXML-1.2/: changes  sgml.tcl  xml.tcl
legacy/osw/TclXML-1.2/docs/: reference.html
legacy/osw/TclXML-1.2/tests/: all.tcl  attribute.test  cdata.test  comment.test  defs.tcl  doctype.test  element.test  entity.test  pcdata.test  pi.test  readme  xmltest.test
legacy/osw/bitmaps/: bundle1.xbm  bundlem.xbm  inletxfm.xbm  littlepatch.ppm  noise.xbm  outletxfm.xbm  phasor.xbm  sine.xbm  unbundle.xbm
legacy/osw/demos/: can_you_say.osw
legacy/osw/demos/Resonances/: Arpeggiator.osw
legacy/osw/demos/ShepardTones/: ShepardTones.osw
legacy/osw/externalizer/: arrowdn.xbm  arrowup.xbm  compilers.tcl  cygwin.mak  cygwin.tcl  externalizer.tcl  gcc-darwin.mak  gcc-darwin.tcl  gcc.mak  gcc.tcl  includes.tcl  ldelete.tcl  msvc.bat  msvc.mak  msvc.tcl  sgi.mak  sgi.tcl  types.tcl
legacy/osw/help_patches/: help_Abs.osw  help_Acos.osw  help_Acosh.osw  help_Acot.osw  help_Acoth.osw  help_Acsc.osw  help_Acsch.osw  help_Angle.osw  help_Array.osw  help_Asec.osw  help_Asech.osw  help_Asin.osw  help_Asinh.osw  help_AsyncPack.osw  help_Atan.osw  help_Atanh.osw  help_AudioInput.osw  help_AudioOutput.osw  help_Bundle.osw  help_Ceil.osw  help_Conj.osw  help_Cos.osw  help_Cosh.osw  help_Cot.osw  help_Coth.osw  help_Csc.osw  help_Csch.osw  help_Exp.osw  help_Fact.osw  help_FanIn.osw  help_FanOut.osw  help_Floor.osw  help_Frac.osw  help_Gamma.osw  help_Gcd.osw  help_Get.osw  help_If.osw  help_Imag.osw  help_Lines.osw  help_List.osw  (+48 more)
legacy/osw/html/: Array.html  AsyncPack.html  AudioInput.html  AudioOutput.html  Bundle.html  Expr.html  FanIn.html  FanOut.html  Get.html  If.html  Inlet.html  List.html  MidiInput.html  MidiOutput.html  OSCBundle.html  OSCDispatch.html  OSCListen.html  OSCRoute.html  OSCSend.html  Outlet.html  Pack.html  Patch.html  Put.html  Putmul.html  Route.html  Switch.html  SyncSwitch.html  SysexOutput.html  Table.html  This.html  TimeMachine.html  Transform_by_alpha.html  Transform_by_group.html  Unbundle.html  Unpack.html  UserGuide.html  add.html  advanced.html  andor.html  bibliography.html  (+36 more)
legacy/osw/html/advanced_files/: Thumbs.db
legacy/osw/html/css/: text.css
legacy/osw/scripts/: audioprefs.tcl  balloon.tcl  breakpoint.tcl  bugfix.tcl  changeColor.tcl  commonStr.tcl  completionbox.tcl  connections.tcl  dock.tcl  editorprefs.tcl  enhcanvas.tcl  enhentry.tcl  enhscale.tcl  evalserver.tcl  extmanage.tcl  floatbox.tcl  font.tcl  help.tcl  keyboard.tcl  knob.tcl  ldelete.tcl  ledmeter.tcl  linuxbrowser.tcl  listify.tcl  manhattan.tcl  midiInSelect.tcl  midiOutSelect.tcl  oscserver.tcl  oswBigTextBox.tcl  oswLoadFile.tcl  oswxml.tcl  patch.tcl  scrolledlistbox.itk  splash.tcl  stack.tcl  stickynote.tcl  table.tcl  toggle.tcl  toggleandlabel.tcl  tooltip.tcl  (+5 more)
legacy/osw/scripts/CVS/: Entries  Repository
legacy/osw/src/: doxyfile
legacy/osw/src/generic/: Generic.mak  Version.mak  base64.cpp  osw.cpp  oswActivation.cpp  oswAny.cpp  oswArgs.cpp  oswArray.cpp  oswAudio.cpp  oswBinop.cpp  oswBinop2.cpp  oswBinop3.cpp  oswBinop3a.cpp  oswBinop3b.cpp  oswBinop4.cpp  oswBinop4a.cpp  oswBinop5.cpp  oswBlob.cpp  oswBundle.cpp  oswCast.cpp  oswCleanup.cpp  oswClock.cpp  oswContainer.cpp  oswDataSource.cpp  oswDelete.cpp  oswEnumeratedString.cpp  oswExpr.cpp  oswFanin.cpp  oswFanout.cpp  oswFreeState.cpp  oswGetPut.cpp  oswInit.cpp  oswInletOutlet.cpp  oswInletOutletTransform.cpp  oswInterface.cpp  oswLex.cpp  oswList.cpp  oswMath.cpp  oswMem.cpp  oswMidi.cpp  (+25 more)
legacy/osw/src/include/: base64.h  m1.h  osw.h  oswActivation.h  oswAllpass.h  oswAny.h  oswArgs.h  oswAudio.h  oswBinop.h  oswBlob.h  oswBundle.h  oswCast.h  oswCfg.h  oswCleanup.h  oswClock.h  oswContainer.h  oswCrap.h  oswDataSource.h  oswDatum.h  oswDelay.h  oswDelete.h  oswEnumeratedString.h  oswExcept.h  oswExport.h  oswExternal.h  oswFileUtils.h  oswFloatify.h  oswFreeState.h  oswHiResTimer.h  oswInit.h  oswInletOutlet.h  oswInterface.h  oswLFO.h  oswLaunchURL.h  oswLex.h  oswList.h  oswLoadOSX.h  oswMath.h  oswMem.h  oswMidi.h  (+32 more)
legacy/osw/src/linux/: COMPILE.linux  INSTALL.linux  Makefile.in  configure  configure.ac  install.sh  osw.spec  oswLinuxAlsaAudio.cpp  oswLinuxAlsaAudio.h  oswLinuxFileUtils.cpp  oswLinuxHiResTimer.cpp  oswLinuxInit.cpp  oswLinuxJackAudio.cpp  oswLinuxJackAudio.h  oswLinuxLoadOSX.cpp  oswLinuxMidi.cpp  oswLinuxMidi.h  oswLinuxMutex.cpp  oswLinuxOSSAudio.cpp  oswLinuxOSSAudio.h  oswLinuxPrefs.cpp  oswLinuxSelect.cpp  oswLinuxSock.cpp  oswLinuxThread.cpp  osw_init.sh
legacy/osw/src/macosx/: COMPILE.macosx  INSTALL.macosx  Makefile.in  OpenSoundWorld.pmsp  Welcome.txt  configure  configure.ac  install.sh  oswMacOSXAnnoyingInit.cpp  oswMacOSXAnnoyingInit.h  oswMacOSXCoreAudio.cpp  oswMacOSXCoreAudio.h  oswMacOSXCoreMidi.cpp  oswMacOSXFileUtils.cpp  oswMacOSXInit.cpp  oswMacOSXLoadOSX.cpp  oswMacOSXMutex.cpp  oswMacOSXPrefs.cpp  oswMacOSXSelect.cpp  oswMacOSXSock.cpp  oswMacOSXThread.cpp  osw_init.sh
legacy/osw/src/osc/: OSC-client.c  OSC-client.h  OSC-common.h  OSC-pattern-match.h  OSC-timetag.c  OSC-timetag.h
legacy/osw/src/portaudio/: pa_asio.cpp  pa_host.h  pa_lib.c  pa_trace.c  pa_trace.h  pa_win_wmme.c  (+1 more)
legacy/osw/src/sgi/: COMPILE.sgi  INSTALL.sgi  Makefile.in  README.sgi  configure  configure.ac  install.sh  oswSGIAudio.cpp  oswSGIAudio.h  oswSGIFileUtils.cpp  oswSGIHiResTimer.cpp  oswSGIInit.cpp  oswSGILoadOSX.cpp  oswSGIMutex.cpp  oswSGIPrefs.cpp  oswSGISelect.cpp  oswSGISock.cpp  oswSGIThread.cpp
lib/: osw.ex  osw_web.ex
lib/osw/: application.ex  mailer.ex
lib/osw_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/osw_web/controllers/: page_controller.ex
lib/osw_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
test/osw_web/controllers/: page_controller_test.exs
test/osw_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: conn_case.ex
(+154 files in other folders)
